--- a/src/styles/root/_variables.scss
+++ b/src/styles/root/_variables.scss
@@ -4,3 +4,7 @@ $primary-background-color: #e5e5e5;
 
 // Text colors
 $primary-text-color: $primary-black-color;
+$secondary-text-color: #666666;
+
+// Links colors
+$primary-link-color: #2492b5;
