--- a/src/views/includes/_layout.pug
+++ b/src/views/includes/_layout.pug
@@ -5,7 +5,6 @@ html(lang='es')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     title Jacob Samuel G.
-    link(rel='stylesheet', href='./styles/app.css')
+    link(rel='stylesheet', href='src/styles/app.css')
   body
     block content
-    block footer
