--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -5,18 +5,18 @@ include ../mixins/_footer
 block content
 
   //- Header
-  header.hm_header
-    .hm_header__main.px-16
-      p.hm_main__text.
-        "La <b>ayuda</b> que necesitas para hacer realidad tu <b>proyecto</b> digital"
-    .hm_header__down.px-16
-      a.hm_down__link(href='#letsDoIt')
-        img.hm_down__icon(src='src/pictures/icon/arrow_down_24.svg')
+  header.header
+    .header__main.px-16
+      p.main__text.
+        <span class='invisible md-visible'>"</span>La <b>ayuda</b> que necesitas para hacer realidad tu <b>proyecto</b> digital<span class='invisible md-visible'>"</span>
+    .header__down.px-16
+      .down__link
+        img.down__icon(src='src/pictures/icon/arrow_down_24.svg')
 
   //- Content
-  section#letsDoIt.container: .hm_content
+  section.container: .w-100pc.md-flex.md-justify-between
 
-    .hm_content__col
+    .w-100pc.md-max-w-294
       .box
         h1.box__title.mb-0 Jacob Samuel G.
         h2.box__subtitle Programador web full-stack
@@ -25,22 +25,22 @@ block content
         p.mt-8.
           Puedo ayudarte en la creación de tu nuevo proyecto digital y guiarte paso a paso durante todas sus etapas, hasta que tu servicio se convierta en una opción rentable y relevante en el mercado.
 
-    .hm_content__col
+    .w-100pc.md-max-w-294
       .box
         h2.box__title Hablemos sobre tu proyecto
-        .hm_talk.mt-16
-          img.hm_talk__icon(src='src/pictures/icon/email_16.svg')
+        .flex.items-center.mt-16
+          img.mr-16(src='src/pictures/icon/email_16.svg')
           p jsgcontacto@gmail.com
-        .hm_talk
-          img.hm_talk__icon(src='src/pictures/icon/phone_16.svg')
+        .flex.items-center.mt-8
+          img.mr-16(src='src/pictures/icon/phone_16.svg')
           p 938 146 02 85
 
       .box
         h2.box__title Escribí algunos artículos que podrían interesarte
-        .hm_articles
-          a.hm_articles__link(href='#') Introducción a las metodologías agiles.
-          a.hm_articles__link(href='#') Que es Lean Startup y porque deberías utilizarlo.
-          a.hm_articles__link(href='#') Los 5 beneficios del MVP.
+        .flex.flex-col.items-start
+          a.block(href='#') Introducción a las metodologías agiles.
+          a.block.mt-8(href='#') Que es Lean Startup y porque deberías utilizarlo.
+          a.block.mt-8(href='#') Los 5 beneficios del MVP.
 
   +footer('home')
 
