--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -1,17 +1,11 @@
 // Root
-@import 'root/variables';
 @import 'root/reboot';
-
-// Pages
-@import 'pages/home';
-@import 'pages/about-me';
 
 // Componets
 @import 'components/container';
 @import 'components/box';
+@import 'components/header';
 @import 'components/footer';
 
 // utilities
-@import 'utilities/spacing';
-
-@import '../../node_modules/tailwindcss/utilities.css';
+@tailwind utilities;
