--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -3,7 +3,7 @@
   width: 100%;
   background-color: white;
   margin-top: 10px;
-  padding: 16px;
+  padding: 32px 16px;
   border-radius: 5px;
 }
 
@@ -14,5 +14,5 @@
 .box__subtitle {
   font-size: 1rem;
   font-weight: 400;
-  margin-bottom: 18px;
+  margin-bottom: 16px;
 }
