--- a/src/styles/components/_header.scss
+++ b/src/styles/components/_header.scss
@@ -1,10 +1,13 @@
-.hm_header {
+.header {
   width: 100%;
-  height: 100vh;
-  background-color: $primary-black-color;
+  // height: 90vh;
+  height: 100%;
+  min-height: 100%;
+  background-color: config('colors.dark-background-color');
 
   @media (min-width: 768px) {
     height: 50vh;
+    min-height: initial;
     max-width: 620px;
     margin-top: 10px;
     margin-left: auto;
@@ -13,14 +16,14 @@
   }
 }
 
-.hm_header__main {
+.header__main {
   width: 100%;
   height: 100%;
   display: flex;
   justify-content: center;
   align-items: center;
 
-  .hm_main__text {
+  .main__text {
     font-size: 1.5rem;
     text-align: center;
     color: white;
@@ -32,7 +35,7 @@
   }
 }
 
-.hm_header__down {
+.header__down {
   display: block;
   position: relative;
   bottom: 130px;
@@ -44,7 +47,7 @@
     display: none;
   }
 
-  .hm_down__link {
+  .down__link {
     width: 100%;
     height: 100%;
     display: flex;
@@ -52,7 +55,7 @@
     align-items: flex-start;
   }
 
-  .hm_down__icon {
+  .down__icon {
     animation: toDown 3s infinite;
 
     @keyframes toDown {
@@ -70,40 +73,4 @@
       }
     }
   }
-}
-
-.hm_content {
-  width: 100%;
-
-  @media (min-width: 768px) {
-    display: flex;
-    justify-content: space-between;
-  }
-}
-
-.hm_content__col {
-  width: 100%;
-  @media (min-width: 768px) {
-    max-width: 294px;
-  }
-}
-.hm_talk {
-  display: flex;
-  align-items: center;
-  margin-top: 8px;
-
-  &__icon {
-    margin-right: 16px;
-  }
-}
-
-.hm_articles {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-}
-
-.hm_articles__link {
-  display: block;
-  margin-top: 8px;
 }
