--- a/src/views/includes/_layout.pug
+++ b/src/views/includes/_layout.pug
@@ -8,3 +8,5 @@ html(lang='es')
     link(rel='stylesheet', href='src/styles/app.css')
   body
     block content
+    script#__bs_script__.
+      document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
