--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -6,6 +6,7 @@
 @import 'components/box';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/404';
 
 // utilities
 @tailwind utilities;
