--- a/src/styles/components/_box.scss
+++ b/src/styles/components/_box.scss
@@ -1,9 +1,11 @@
 .box {
   display: block;
   width: 100%;
-  background-color: white;
-  margin-top: 10px;
   padding: 32px 16px;
+  margin-top: 16px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: white;
   border-radius: 5px;
 }
 
