--- a/src/styles/root/_reboot.scss
+++ b/src/styles/root/_reboot.scss
@@ -152,6 +152,7 @@ a {
   text-decoration: none;
   background-color: transparent;
   -webkit-text-decoration-skip: objects;
+  transition: all .3s ease;
 }
 
 a:hover {
