--- a/src/views/includes/_layout.pug
+++ b/src/views/includes/_layout.pug
@@ -4,9 +4,10 @@ html(lang='es')
     meta(charset='UTF-8')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
-    title Jacob Samuel G.
+    meta(name='theme-color', content='#21232a')
     link(rel='stylesheet', href='src/styles/app.css')
+    link(rel='shortcut icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
+    link(rel='icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
+    title Jacob Samuel G.
   body
     block content
-    script#__bs_script__.
-      document.write("<script async src='http://HOST:3000/browser-sync/browser-sync-client.js?v=2.23.6'><\/script>".replace("HOST", location.hostname));
