--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -6,22 +6,10 @@ block content
   section.container
     .box.max-w-620.mt-80.md-px-110
       div.flex.justify-center
-        img.-mt-92.rounded-50pc(src='src/pictures/img/profile.jpg')
+        img.-mt-92.rounded-50pc(src='src/pictures/img/profile_120.jpg')
       .mt-16
         h1.box__title.text-center.mb-0 Jacob Samuel G.
         h2.box__subtitle.text-center Programador web full-stack
-        //- p.
-        //-   Le apasiona descubrir, planificar y emprender proyectos.
-        //- p.mt-8.
-        //-   Es autodidacta, sus estudios actuales están enfocados en la programación web, la administración de sistemas, el desarrollo de modelos de negocio y la teología reformada.
-        //- p.mt-8.
-        //-   Tiene gran interés por el dibujo, la animación y el guionismo; eventualmente incursionará en dichos campos.
-        //- p.mt-8.
-        //-   Aunque algunos dicen lo contrario, Jacob suele ser introvertido, pasar tiempo a solas es fundamental para su existencia. Sin embargo, disfruta mucho estar con amigos.
-        //- p.mt-8.
-        //-   A Jacob le gusta escribir. A veces escribe cosas extrañas e innecesarias como esta presentación.
-        //- p.mt-8.
-        //-   También le encanta comer y probar cosas nuevas, sobre todo postres. Invítale un paste y te amará.
         p.
           <span class='text-blacky'>J</span>acob es autodidacta, le apasiona descubrir, planificar y emprender proyectos.
         p.mt-8.
@@ -36,6 +24,6 @@ block content
     .box.max-w-620.md-px-110
       h2.box__title.text-center Enlaces
       p.
-        Encuentra a Jacob en <a href='#' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a href='#' target="_blank">Blog personal</a>.
+        Encuentra a Jacob en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a href='https://notes.tojacob.com'>Blog personal</a>.
 
-  +footer('about')
+    +footer('about')
