--- a/src/styles/components/_footer.scss
+++ b/src/styles/components/_footer.scss
@@ -3,11 +3,17 @@
   justify-content: space-around;
   width: 100%;
   max-width: 620px;
-  padding: 16px;
+  background-color: config('colors.dark-background-color');
+  padding: 32px 16px;
   margin: 16px auto;
+  border-radius: 5px;
 }
 
-.footer--active {
+.footer__link {
+  color: #fff;
+}
+
+.footer__link--active {
   color: config('colors.secondary-text-color');
   pointer-events: none;
   cursor: default;
