--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -11,7 +11,7 @@ block content
         <span class='invisible md-visible'>"</span>La <b>ayuda</b> que necesitas para hacer realidad tu <b>proyecto</b> digital<span class='invisible md-visible'>"</span>
     .header__down.px-16
       .down__link
-        img.down__icon(src='src/pictures/icon/arrow_down_24.svg')
+        img.down__icon(src='src/pictures/svg/arrow_down_24.svg')
 
   //- Content
   section.container: .w-100pc.md-flex.md-justify-between
@@ -29,20 +29,21 @@ block content
       .box
         h2.box__title Hablemos sobre tu proyecto
         .flex.items-center.mt-16
-          img.mr-16(src='src/pictures/icon/email_16.svg')
+          img.mr-16(src='src/pictures/svg/email_16.svg')
           p jsgcontacto@gmail.com
         .flex.items-center.mt-8
-          img.mr-16(src='src/pictures/icon/phone_16.svg')
+          img.mr-16(src='src/pictures/svg/phone_16.svg')
           p 938 146 02 85
 
       .box
         h2.box__title Escribí algunos artículos que podrían interesarte
         .flex.flex-col.items-start
-          a.block(href='#') Introducción a las metodologías agiles.
-          a.block.mt-8(href='#') Que es Lean Startup y porque deberías utilizarlo.
-          a.block.mt-8(href='#') Los 5 beneficios del MVP.
+          a.block(href='https://bit.ly/2GQFeQO') Sincera Introducción a las metodologías agiles.
+          a.block.mt-8(href='https://bit.ly/2Jaf6yF') Que es Lean Startup y porque deberías utilizarlo.
+          a.block.mt-8(href='https://bit.ly/2q1z86w') Los 5 beneficios del MVP.
 
-  +footer('home')
+  .container
+    +footer('home')
 
 
 
