--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -38,7 +38,7 @@ block content
       .box
         h2.box__title Escribí algunos artículos que podrían interesarte
         .flex.flex-col.items-start
-          a.block(href='https://bit.ly/2GQFeQO') Sincera Introducción a las metodologías agiles.
+          a.block(href='https://bit.ly/2GQFeQO') Sincera introducción a las metodologías agiles.
           a.block.mt-8(href='https://bit.ly/2Jaf6yF') Que es Lean Startup y porque deberías utilizarlo.
           a.block.mt-8(href='https://bit.ly/2q1z86w') Los 5 beneficios del MVP.
 
