--- a/src/views/includes/_layout.pug
+++ b/src/views/includes/_layout.pug
@@ -5,6 +5,13 @@ html(lang='es')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     meta(name='theme-color', content='#21232a')
+    meta(name='AUTHOR', content='Jacob Samuel G')
+    meta(name='REPLY-TO', content='jsgcontacto@gmail.com')
+    meta(name='DESCRIPTION', content='Programador web full-stack')
+    meta(name='KEYWORDS', content='programación,mvp,desarrollo web')
+    meta(name='Revisit-after', content='7 days')
+    meta(name='robots', content='ALL')
+    link(rev='made', href='mailto:jsgcontacto@gmail.com')
     link(rel='stylesheet', href='src/styles/app.css')
     link(rel='shortcut icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
     link(rel='icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
