add new page and articles

--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -4,8 +4,11 @@
 // Componets
 @import 'components/container';
 @import 'components/box';
+@import 'components/bar';
 @import 'components/header';
 @import 'components/footer';
+@import 'components/accordion';
+
 @import 'components/404';
 
 // utilities
