--- a/src/views/includes/_layout-main.pug
+++ b/src/views/includes/_layout-main.pug
@@ -12,9 +12,9 @@ html(lang='es')
     meta(name='Revisit-after', content='7 days')
     meta(name='robots', content='ALL')
     link(rev='made', href='mailto:jsgcontacto@gmail.com')
-    link(rel='stylesheet', href='src/styles/app.css')
-    link(rel='shortcut icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
-    link(rel='icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
+    link(rel='stylesheet', href='assets/styles/app.css')
+    link(rel='shortcut icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
+    link(rel='icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
     title Jacob Samuel G.
   body
     block content
