--- a/src/views/mixins/_footer.pug
+++ b/src/views/mixins/_footer.pug
@@ -1,6 +1,6 @@
 
 mixin footer(type)
-  footer.footer
+  footer.footer.container
     case type
       when 'home'
         a.footer__link.footer__link--active(href='/') Inicio
