--- a/src/views/pages/404.pug
+++ b/src/views/pages/404.pug
@@ -6,9 +6,9 @@ html(lang='es')
     meta(http-equiv='X-UA-Compatible', content='IE=edge')
     meta(name='viewport', content='width=device-width, initial-scale=1')
     meta(name='theme-color', content='#21232a')
-    link(rel='stylesheet', href='src/styles/app.css')
-    link(rel='shortcut icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
-    link(rel='icon', href='src/pictures/icon/favicon.ico', type='image/x-icon')
+    link(rel='stylesheet', href='assets/styles/app.css')
+    link(rel='shortcut icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
+    link(rel='icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
     title Tenemos algunos problemas | 404 - Recurso no encontrado
   body.the-404
     section
