--- a/src/views/pages/process.pug
+++ b/src/views/pages/process.pug
@@ -187,6 +187,9 @@ block content
       p.
         Después de este punto, es posible que nuestro proceso de trabajo sea más rápido y ágil, después de todo, ya tendremos cierta confianza trabajando juntos y ambos conoceremos bien los pasos a seguir. Naturalmente los precios de desarrollo seguirán cobrándose por funcionalidad.
 
+    h3.box__subtitle.mt-32 Links
+    a#contrato(href="#contrato") <em>Contrato proximamente...</em>
+
   +footer('process')
 
   script(src="/assets/js/accordion.js")
