--- a/src/views/includes/_layout-main.pug
+++ b/src/views/includes/_layout-main.pug
@@ -5,13 +5,10 @@ html(lang='es')
     meta(name='viewport', content='width=device-width, initial-scale=1.0')
     meta(http-equiv='X-UA-Compatible', content='ie=edge')
     meta(name='theme-color', content='#21232a')
-    meta(name='AUTHOR', content='Jacob Samuel G')
-    meta(name='REPLY-TO', content='jsgcontacto@gmail.com')
-    meta(name='DESCRIPTION', content='Programador web full-stack')
-    meta(name='KEYWORDS', content='programación,mvp,desarrollo web')
-    meta(name='Revisit-after', content='7 days')
-    meta(name='robots', content='ALL')
-    link(rev='made', href='mailto:jsgcontacto@gmail.com')
+    meta(name='robots', content='index, follow')
+    meta(name='author', content='Jacob Samuel G, jsgcontacto@gmail.com')
+    meta(name='description', content='Programador web full-stack')
+    meta(name='keywords', content='programación,mvp,desarrollo web')
     link(rel='stylesheet', href='assets/styles/app.css')
     link(rel='shortcut icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
     link(rel='icon', href='assets/pictures/icon/favicon.ico', type='image/x-icon')
