cambios en about-me

--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -12,22 +12,26 @@ block content
       div.flex.justify-center
         img.-mt-92.rounded-50pc(src='assets/pictures/img/profile_120.jpg')
       .mt-16
-        h1.box__title.text-center.mb-0 Jacob Samuel G.
-        h2.box__subtitle.text-center Programador web full-stack
+        h1.box__title.text-center Jacob Samuel G.
+        //- h2.box__subtitle.text-center Programador web full-stack
         p.
-          <span class='text-blacky'>J</span>acob es autodidacta, le apasiona descubrir, planificar y emprender proyectos.
+          <span class='text-blacky'>J</span>acob es autodidacta, le gusta descubrir, planificar y emprender proyectos.
         p.
-          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología.
+          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología cristiana.
         p.
           <span class='text-blacky'>C</span>onsidera aprender dibujo, animación y guionismo; estos campos le atraen muchísimo, eventualmente incursionará en ellos.
         p.
           <span class='text-blacky'>O</span>casionalmente disfruta escribir, a veces escribe cosas extrañas e innecesarias, como esta presentación, por ejemplo.
         p.
-          <span class='text-blacky'>B</span>ien sabido es que le gusta comer y probar cosas nuevas, sobre todo postres; invítale un pastel y te amará.
+          <span class='text-blacky'>B</span>ien sabido es que le encanta comer y probar cosas nuevas, sobre todo postres; invítale un pastel y te amará.
 
     .box.md-px-110
       h2.box__title.text-center Enlaces
       p.
-        Quizá encuentres a Jacob en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a href='https://notes.tojacob.com'>Blog personal</a>.
+        Hay bastantes cosas que no he podido contarte sobre Jacob, porque bueno, los acrósticos están limitados por una palabra.
+      p.
+        El piensa que la mayoría de asuntos en las redes sociales son absoluta banalidad, por no decir vanidad. Hace mucho decidió dejar las redes, ahora las utiliza cada vez menos.
+      p.
+        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>.
 
   +footer('about')
