correcciones en about-me

--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -17,7 +17,7 @@ block content
         p.
           <span class='text-blacky'>J</span>acob es autodidacta, le gusta descubrir, planificar y emprender proyectos.
         p.
-          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología cristiana.
+          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología biblica.
         p.
           <span class='text-blacky'>C</span>onsidera aprender dibujo, animación y guionismo; estos campos le atraen muchísimo, eventualmente incursionará en ellos.
         p.
@@ -29,8 +29,6 @@ block content
       h2.box__title.text-center Enlaces
       p.
         Hay bastantes cosas que no he podido contarte sobre Jacob, porque bueno, los acrósticos están limitados por una palabra.
-      p.
-        El piensa que la mayoría de asuntos en las redes sociales son absoluta banalidad, por no decir vanidad. Hace mucho decidió dejar las redes, ahora las utiliza cada vez menos.
       p.
         Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>.
 
