--- a/src/styles/app.scss
+++ b/src/styles/app.scss
@@ -2,12 +2,13 @@
 @import 'root/reboot';
 
 // Componets
-@import 'components/container';
+@import 'components/about';
+@import 'components/accordion';
 @import 'components/box';
 @import 'components/bar';
-@import 'components/header';
+@import 'components/container';
 @import 'components/footer';
-@import 'components/accordion';
+@import 'components/header';
 
 @import 'components/404';
 
