--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -19,16 +19,14 @@ block content
         p.
           <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología biblica.
         p.
-          <span class='text-blacky'>C</span>onsidera aprender dibujo, animación y guionismo; estos campos le atraen muchísimo, eventualmente incursionará en ellos.
+          <span class='text-blacky'>C</span>onsidera que el tiempo es importante, por ello ha decidido utilizar sabiamente cada día, cada oportunidad.
         p.
-          <span class='text-blacky'>O</span>casionalmente disfruta escribir, a veces escribe cosas extrañas e innecesarias, como esta presentación, por ejemplo.
+          <a class='text-blacky secret-link' href='https://enmidimension.tumblr.com/' target='_blank'>O</a>casionalmente disfruta escribir, a veces escribe cosas extrañas, como esta presentación, por ejemplo.
         p.
           <span class='text-blacky'>B</span>ien sabido es que le encanta comer y probar cosas nuevas, sobre todo postres; invítale un pastel y te amará.
 
     .box.md-px-110
       h2.box__title.text-center Enlaces
-      p.
-        Hay bastantes cosas que no he podido contarte sobre Jacob, porque bueno, los acrósticos están limitados por una palabra.
       p.
         Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>.
 
