--- a/src/views/pages/articles/intro-agile.pug
+++ b/src/views/pages/articles/intro-agile.pug
@@ -59,7 +59,7 @@ block content
 
       h3.box__subtitle.mt-32 ¿Dónde queda Scrum? ¿Y Design Thinking? ¿Qué pasa con Lean?
       p.
-        Como ya hemos visto, Ágil no una metodología como tal, se trata de una forma de pensar, una forma de hacer las cosas. Debido a esto y para agregar un poco de estructura, se crearon diversas metodologías basadas en el “Manifiesto Ágil” que permiten trabajar de forma “ordenada” aplicando las mejores practicas en los equipos de desarrollo.
+        Como ya hemos visto, Ágil no una metodología como tal, se trata de una forma de pensar. Debido a esto y para agregar un poco de estructura, se crearon diversas metodologías basadas en el “Manifiesto Ágil” que permiten trabajar de forma “ordenada” aplicando las mejores practicas en los equipos de desarrollo.
       p.
         En otras palabras. Las metodologías ágiles son herramientas que ayudan a implementar la filosofía Ágil dependiendo del entorno de trabajo.
       p.
