--- a/src/views/pages/articles/mvp-benefits.pug
+++ b/src/views/pages/articles/mvp-benefits.pug
@@ -56,7 +56,7 @@ block content
         Ya no se trata de encontrar todas las posibles soluciones y funciones que puedes ofrecerle al cliente, ahora se trata de probar aquella utilidad principal y a partir de ella, comenzar a trazar el modelo de negocio.
       p.
         <b> 5. El modelo de negocio. </b>
-        Ya sabemos que el modelo de negocio es parte crucial de un startup, de hecho, es la razón de su existencia. Un startup existe para encontrar la forma de ser rentable antes de convertirse en una empresa. El vinculo que creado entre Lean Startup y el MVP esta diseñado para ayudarte a encontrar tu modelo de negocio.
+        Ya sabemos que el modelo de negocio es parte crucial de un startup, de hecho, es la razón de su existencia. Un startup existe para encontrar la forma de ser rentable antes de convertirse en una empresa. El vinculo creado entre Lean Startup y el MVP esta diseñado para ayudarte a encontrar tu modelo de negocio.
       p.
         <b> 6. Bonus: Inversores. </b>
         Encontrar inversores aplicando la metodología Lean Startup puede ser más sencillo. Debido a la naturaleza de la metodología, rápidamente te encontrarás trabajando en el proyecto y obtendrás cierta tracción que es favorable a la hora de encontrar inversores. Además, existen personas que solo invierten en proyectos Lean, porque entienden que el riesgo al fracaso es menor.
