modified about me

--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -21,7 +21,7 @@ block content
         p.
           <span class='text-blacky'>C</span>onsidera que el tiempo es importante, por ello ha decidido utilizar sabiamente cada día, cada oportunidad.
         p.
-          <a class='text-blacky secret-link' href='https://enmidimension.tumblr.com/' target='_blank'>O</a>casionalmente disfruta escribir, a veces escribe cosas extrañas, como esta presentación, por ejemplo.
+          <a class='text-blacky secret-link' href='https://enmidimension.tumblr.com/' target='_blank'>O</a>casionalmente disfruta escribir, a veces escribe cosas extrañas, como este párrafo, por ejemplo.
         p.
           <span class='text-blacky'>B</span>ien sabido es que le encanta comer y probar cosas nuevas, sobre todo postres; invítale un pastel y te amará.
 
