--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -15,9 +15,9 @@ block content
         h1.box__title.text-center Jacob Samuel G.
         //- h2.box__subtitle.text-center Programador web full-stack
         p.
-          <span class='text-blacky'>J</span>acob es autodidacta, le gusta descubrir, planificar y emprender proyectos.
+          <span class='text-blacky'>J</span>acob es autodidacta, le gusta descubrir y planificar proyectos, algunas veces salen a la luz, la mayoría de las veces permanecen en su libreta.
         p.
-          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología biblica.
+          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología bíblica.
         p.
           <span class='text-blacky'>C</span>onsidera que el tiempo es importante, por ello ha decidido utilizar sabiamente cada día, cada oportunidad.
         p.
@@ -28,6 +28,6 @@ block content
     .box.md-px-110
       h2.box__title.text-center Enlaces
       p.
-        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>. Y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>.
+        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>, y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>. Si observas en su luna, probablemente halles un lugar más.
 
   +footer('about')
