update to github pages

--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -28,6 +28,6 @@ block content
     .box.md-px-110
       h2.box__title.text-center Enlaces
       p.
-        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>, y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>. Si observas en su luna, probablemente halles un lugar más.
+        Quizá lo encuentres en <a href='https://www.facebook.com/jsgnotas' target="_blank">Facebook</a>. Puedes mirar sus nada asombrosas fotografías en <a href='https://instagram.com/jacobs_views' target="_blank">Instagram</a>, y leer algunas de las notas bíblicas que comparte en su <a style="white-space: nowrap;" href='https://notes.tojacob.com'>Blog personal</a>.
 
   +footer('about')
