--- a/src/views/pages/about-me.pug
+++ b/src/views/pages/about-me.pug
@@ -17,11 +17,11 @@ block content
         p.
           <span class='text-blacky'>J</span>acob es autodidacta, le gusta descubrir y planificar proyectos, algunas veces salen a la luz, la mayoría de las veces permanecen en su libreta.
         p.
-          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, el desarrollo de modelos de negocio y la teología bíblica.
+          <span class='text-blacky'>A</span>ctualmente está enfocado en la programación web, la ilustración digital y la teología bíblica.
         p.
           <span class='text-blacky'>C</span>onsidera que el tiempo es importante, por ello ha decidido utilizar sabiamente cada día, cada oportunidad.
         p.
-          <a class='text-blacky secret-link' href='https://enmidimension.tumblr.com/' target='_blank'>O</a>casionalmente disfruta escribir, a veces escribe cosas extrañas, como este párrafo, por ejemplo.
+          <a class='text-blacky secret-link' href='https://enmidimension.tumblr.com/' target='_blank'>O</a>casionalmente disfruta escribir. A veces escribe cosas extrañas, como este párrafo, por ejemplo.
         p.
           <span class='text-blacky'>B</span>ien sabido es que le encanta comer y probar cosas nuevas, sobre todo postres; invítale un pastel y te amará.
 
