--- a/src/views/pages/index.pug
+++ b/src/views/pages/index.pug
@@ -29,7 +29,7 @@ block content
         h2.box__title Hablemos sobre tu proyecto
         .flex.items-center.mt-16
           img.mr-16(src='assets/pictures/svg/email_16.svg')
-          p.m-0 jsgcontacto@gmail.com
+          p.m-0 jsgcontacto[arroba]gmail.com
         .flex.items-center.mt-8
           img.mr-16(src='assets/pictures/svg/phone_16.svg')
           p.m-0 938 146 02 85
